--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database - Neon.tech PostgreSQL
-DATABASE_URL=postgresql://username:password@hostname/database?sslmode=require
+DATABASE_URL='your-database-connection-string-here'
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
