--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ dist-ssr
 .env
 .env.*.local
 
+# Drizzle migrations (opcional - si no quieres versionar las migraciones)
+drizzle
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
