--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,7 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
     "db:migrate": "drizzle-kit migrate:pg",
-    "db:studio": "drizzle-kit studio",
-    "db:seed": "bun run src/db/seed.ts"
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "hono": "^4.0.0",
