refactor(build): update dev scripts and remove backend devDependencies
- Remove devDependencies from backend/package.json to streamline CI builds
- Update database import path from schema.js to index.js for consistency
- Modify root dev script to use 'cd && bunx vite' for client, improving reliability

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "backend"
   ],
   "scripts": {
-    "dev": "concurrently \"bun run dev --cwd client\" \"bun run dev --cwd backend\"",
+    "dev": "concurrently \"cd client && bunx vite\" \"cd backend && bun run dev\"",
     "dev:client": "bun run dev --cwd client",
     "dev:backend": "bun run dev --cwd backend",
     "build": "bun run build --cwd client && bun run build --cwd backend",
