--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,9 @@ FRONTEND_URL=http://localhost:5173
 # PASETO Configuration (generate a secure random key)
 PASETO_SECRET=your-base64-encoded-32-byte-paseto-key-here
 
+# Image Upload Configuration (ImgBB)
+IMGBB_API_KEY=your-imgbb-api-key-here
+
 # Email Configuration (optional)
 EMAIL_SERVICE=gmail
 EMAIL_USER=your-email@gmail.com
