feat: implement user approval workflow and update Drizzle config
- Update Drizzle config to use PostgreSQL dialect and array schema
- Add estado, aprobadoPor, and fechaAprobacion fields to users table
- Modify login to check user approval status before generating token
- Add admin endpoints and frontend logic for approving/rejecting users
- Update package.json scripts to remove PostgreSQL-specific suffixes

This introduces a user approval system where new users are pending admin review, preventing unapproved logins and allowing admins to manage user access.

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,9 @@
     "start": "bun run dist/server.js",
     "lint": "eslint src/**/*.ts",
     "test": "jest",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:push": "drizzle-kit push:pg",
-    "db:migrate": "drizzle-kit migrate:pg",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
