feat(test): add testing framework and scripts for client and backend
- Added Vitest configuration to client/vite.config.ts with jsdom environment and setup files
- Added test scripts to client/package.json (test and test:ui)
- Added root-level test scripts to package.json for running tests across client and backend
- Installed testing dependencies including Vitest, Jest, Testing Library, and related types
- Updated bun.lockb to reflect new dependencies

This change introduces a comprehensive testing setup using Vitest for the client and Jest for the backend, enabling developers to run unit and integration tests efficiently across the project.

--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "build": "bunx vite build",
     "build:dev": "bunx vite build --mode development",
     "lint": "eslint .",
-    "preview": "bunx vite preview"
+    "preview": "bunx vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
