--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "build:backend": "bun run build --cwd backend",
     "start": "concurrently \"bun run preview --cwd client\" \"bun run start --cwd backend\"",
     "install:all": "bun install",
-    "clean": "rm -rf node_modules client/node_modules backend/node_modules && bun install"
+    "clean": "rm -rf node_modules client/node_modules backend/node_modules && bun install",
+    "test": "bun run test --cwd backend && bun run test --cwd client",
+    "test:backend": "bun run test --cwd backend",
+    "test:client": "bun run test --cwd client"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -72,6 +75,10 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -83,11 +90,15 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "jest": "^30.2.0",
+    "jsdom": "^27.3.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^4.0.16"
   }
 }
