refactor(client): modularize AdminDashboard and add db seed script
Split the large AdminDashboard component into Sidebar, DashboardView, and GroupsView for improved maintainability and reusability. Added a new npm script "db:seed" in backend/package.json to run database seeding.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "clean": "rm -rf node_modules client/node_modules backend/node_modules && bun install",
     "test": "bun run test --cwd backend && bun run test --cwd client",
     "test:backend": "bun run test --cwd backend",
-    "test:client": "bun run test --cwd client"
+    "test:client": "bun run test --cwd client",
+    "db:seed": "bun run --cwd backend src/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
