--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bun run src/seed.ts"
   },
   "dependencies": {
     "hono": "^4.0.0",
