--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "bun run src/seed.ts"
+    "db:seed": "bun run src/seed.ts",
+    "db:simulate": "bun run src/simulate-selections.ts"
   },
   "dependencies": {
     "hono": "^4.0.0",
