--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -26,6 +26,6 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "temporal/remove-tag.ts", "temporal/seed.ts", "temporal/simulate-demo.ts", "temporal/simulate-selections.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
