refactor: move backend scripts to dedicated directory
Move seed.ts and simulate-selections.ts from src/ to scripts/ in backend, update package.json scripts in both backend and root to reference the new paths, add 'scripts' to .gitignore, remove specific script includes from backend tsconfig.json, and add ignoreDeprecations option to root tsconfig.json for better project organization.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -26,6 +26,6 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true
   },
-  "include": ["src/**/*", "temporal/remove-tag.ts", "temporal/seed.ts", "temporal/simulate-demo.ts", "temporal/simulate-selections.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
