refactor: enhance type safety by replacing any types with proper interfaces
Replaced 'any' types in authentication middleware, routes, and tests with specific interfaces like JWTPayload and User. Updated frontend composables to import and use shared User type, improving code reliability, maintainability, and reducing potential runtime errors.

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,10 @@
     "build": "bunx vite build",
     "build:dev": "bunx vite build --mode development",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
     "preview": "bunx vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui"
