refactor: enhance type safety and error handling in backend
- Add type-check script to package.json for TypeScript validation
- Improve type annotations and assertions in middleware and routes
- Strengthen error handling in WebSocket server and user status updates
- Add explicit returns in middleware for better flow control
- Replace JSON error responses with thrown errors for consistency

This refactor addresses potential runtime errors by enforcing stricter typing and providing more robust error management across the backend.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"cd client && bunx vite\" \"cd backend && bun run dev\"",
     "dev:client": "bun run dev --cwd client",
     "dev:backend": "bun run dev --cwd backend",
-    "build": "bun run build --cwd client && bun run build --cwd backend",
+    "build": "cd client && bunx vite build && cd ../backend && bun run build",
     "build:client": "bun run build --cwd client",
     "build:backend": "bun run build --cwd backend",
     "start": "concurrently \"bun run preview --cwd client\" \"bun run start --cwd backend\"",
