--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot src/server.ts",
-    "build": "bun build src/server.ts --outdir dist --target bun",
-    "start": "bun run dist/server.js",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
@@ -16,8 +16,8 @@
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "bun run scripts/seed.ts",
-    "db:simulate": "bun run scripts/simulate-selections.ts"
+    "db:seed": "tsx scripts/seed.ts",
+    "db:simulate": "tsx scripts/simulate-selections.ts"
   },
   "dependencies": {
     "hono": "^4.0.0",
@@ -25,7 +25,11 @@
     "paseto": "^3.1.4",
     "drizzle-orm": "^0.29.4",
     "postgres": "^3.4.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "tsx": "^4.7.0",
+    "typescript": "^5.0.0",
+    "@hono/zod-validator": "^0.3.0",
+    "@hono/node-server": "^1.0.0"
   },
   "keywords": [
     "saving-circles",
