--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "backend"
   ],
   "scripts": {
-    "dev": "concurrently \"cd client && bunx vite\" \"cd backend && bun run dev\"",
-    "dev:client": "bun run dev --cwd client",
-    "dev:backend": "bun run dev --cwd backend",
-    "build": "cd client && bunx vite build && cd ../backend && bun run build",
-    "build:client": "bun run build --cwd client",
-    "build:backend": "bun run build --cwd backend",
-    "start": "concurrently \"bun run preview --cwd client\" \"bun run start --cwd backend\"",
-    "install:all": "bun install",
-    "clean": "rm -rf node_modules client/node_modules backend/node_modules && bun install",
-    "test": "bun run test --cwd backend && bun run test --cwd client",
-    "test:backend": "bun run test --cwd backend",
-    "test:client": "bun run test --cwd client",
-    "db:seed": "bun run --cwd backend temporal/seed.ts",
-    "db:simulate": "bun run --cwd backend temporal/simulate-selections.ts",
-    "lint": "cd client && bun run lint && cd ../backend && bun run lint",
-    "lint:client": "cd client && bun run lint",
-    "lint:backend": "cd backend && bun run lint",
-    "format": "cd client && bun run format && cd ../backend && bun run format",
-    "format:client": "cd client && bun run format",
-    "format:backend": "cd backend && bun run format",
-    "type-check": "cd client && bun run type-check && cd ../backend && bun run type-check",
-    "type-check:client": "cd client && bun run type-check",
-    "type-check:backend": "cd backend && bun run type-check"
+    "dev": "concurrently \"cd client && pnpm exec vite\" \"cd backend && pnpm run dev\"",
+    "dev:client": "pnpm run dev --filter client",
+    "dev:backend": "pnpm run dev --filter backend",
+    "build": "cd client && pnpm exec vite build && cd ../backend && pnpm run build",
+    "build:client": "pnpm run build --filter client",
+    "build:backend": "pnpm run build --filter backend",
+    "start": "concurrently \"pnpm exec vite preview --cwd client\" \"pnpm run start --filter backend\"",
+    "install:all": "pnpm install",
+    "clean": "rm -rf node_modules client/node_modules backend/node_modules && pnpm install",
+    "test": "pnpm run test --filter backend && pnpm run test --filter client",
+    "test:backend": "pnpm run test --filter backend",
+    "test:client": "pnpm run test --filter client",
+    "db:seed": "pnpm exec --cwd backend temporal/seed.ts",
+    "db:simulate": "pnpm exec --cwd backend temporal/simulate-selections.ts",
+    "lint": "pnpm run lint --filter client && pnpm run lint --filter backend",
+    "lint:client": "pnpm run lint --filter client",
+    "lint:backend": "pnpm run lint --filter backend",
+    "format": "pnpm run format --filter client && pnpm run format --filter backend",
+    "format:client": "pnpm run format --filter client",
+    "format:backend": "pnpm run format --filter backend",
+    "type-check": "pnpm run type-check --filter client && pnpm run type-check --filter backend",
+    "type-check:client": "pnpm run type-check --filter client",
+    "type-check:backend": "pnpm run type-check --filter backend"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
