refactor: consolidate dotenv usage and update dev script
- Moved dotenv configuration to database.ts to centralize environment variable loading
- Removed redundant dotenv imports from server.ts
- Updated dev script to use bun instead of pnpm for backend development
- These changes improve code organization and consistency across the project

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "backend"
   ],
   "scripts": {
-    "dev": "concurrently \"cd client && pnpm exec vite\" \"cd backend && pnpm run dev\"",
+    "dev": "concurrently \"cd client && pnpm exec vite\" \"cd backend && bun run dev\"",
     "dev:client": "pnpm run dev --filter client",
     "dev:backend": "pnpm run dev --filter backend",
     "build": "cd client && NODE_OPTIONS=\"--max-old-space-size=4096\" pnpm exec vite build && cd ../backend && pnpm run build",
