chore: update build and start scripts for production TypeScript compilation
Updated the build and start scripts in package.json to use a dedicated production TypeScript configuration and added a build check to the start script to ensure the dist/server.js file exists before attempting to run the application.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "build": "tsc -p tsconfig.production.json",
+    "start": "if [ ! -f dist/server.js ]; then echo 'Building TypeScript...'; bun run build; fi && node dist/server.js",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
