chore: update TypeScript production config with ESNext module settings
Updated tsconfig.production.json to include ESNext module configuration, node module resolution, and JSON module support for improved compatibility with modern TypeScript features and external dependencies.

--- a/backend/tsconfig.production.json
+++ b/backend/tsconfig.production.json
@@ -4,6 +4,9 @@
     "declaration": false,
     "declarationMap": false,
     "sourceMap": false,
-    "removeComments": true
+    "removeComments": true,
+    "moduleResolution": "node",
+    "module": "ESNext",
+    "resolveJsonModule": true
   }
 }
