--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "tsx": "^4.7.0",
     "typescript": "^5.0.0",
     "@hono/zod-validator": "^0.3.0",
-    "@hono/node-server": "^1.0.0"
+    "@hono/node-server": "^1.0.0",
+    "@vercel/node": "^3.0.0"
   },
   "keywords": [
     "saving-circles",
